syntax = "proto3";

package postservice;

message CreatePostRequest {
  int32 user_id = 1;
  string content = 2;
  repeated string media_urls = 3;
}

message CreatePostResponse {
  string status = 1;
  string message = 2;
}

service PostService {
  rpc CreatePost(CreatePostRequest) returns (CreatePostResponse);
}
